--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +13,26 @@
 </head>
 
 <body class="app">
-    <header class="encabezado">encabezado</header>
+    <header class="encabezado">
+        <nav class="menu">
+            <ul class="menu__lista">
+                <li class="menu__item">
+                    <a class="menu__link activo" href="#">
+                        <i class="fas fa-home"></i>
+                        Inicio
+                    </a>
+                    <a class="menu__link" href="#">
+                        <i class="fas fa-mobile-alt"></i>
+                        Aplicaciones</a>
+                    <a class="menu__link" href="#">
+                        <i class="fas fa-gamepad"></i>
+                        Juegos
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <main class="contenido">
         <section class="destaques">
             <div class="destaques__principal box">
@@ -349,7 +367,7 @@
             </div>
         </section>
     </main>
-    <footer class="rodapie">rodapie</footer>
+    <footer class="rodapie">Todos los derechos reservados &copy; 2022</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
